# codec2_stm32f746g-discovery

./: .gitmodules  CMakeLists.txt  FreeRTOS_Lib.cmake  Opus_Lib.cmake  STM32746_Lib.cmake  STM32_Toolchain.cmake  _print_timing.c  cad_test.md  cad_test.sh  error_todo.txt  fhss_flow.md  fhss_readme.md  frequncy_hopping.txt  fsk_readme.md  gencodebooks.cmake  longer_scan.txt  pinDefs.h  pinDefs_lr20xx.h  pinDefs_sx126x.h  pinDefs_sx127x.h  readme.md  rx_todo.txt  sf.txt  startup_stm32f746xx.s  stm32f746_flash.ld  stm32f7xx_hal_conf.h  streaming_design.md  sweep_test.txt  syscalls.c  test_cad_params.sh  test_fhss.sh  test_fhss_rates.sh  test_radio_link.sh  todo.txt  todo_fifo.txt
docs/: streaming_flow.md
lora_transceiver/Inc/: FreeRTOSConfig.h  freertos_tasks.h  main.h  stm32f7xx_it.h
lora_transceiver/Src/: app_lr20xx.c  app_sx126x.c  app_sx127x.c  freertos_tasks.c  lora_xcvr.c  main.c  radio.c  stm32f7xx_it.c  system_stm32f7xx.c
lr20xx/: lr20xx.c  lr20xx.h  lr20xx_hal.c
lr20xx_driver/: CHANGELOG.md  CMakeLists.txt  README.md
lr20xx_driver/inc/: lr20xx_driver_version.h  lr20xx_hal.h  lr20xx_radio_bluetooth_le.h  lr20xx_radio_bluetooth_le_types.h  lr20xx_radio_bpsk.h  lr20xx_radio_bpsk_types.h  lr20xx_radio_common.h  lr20xx_radio_common_types.h  lr20xx_radio_fifo.h  lr20xx_radio_fifo_types.h  lr20xx_radio_flrc.h  lr20xx_radio_flrc_types.h  lr20xx_radio_fsk.h  lr20xx_radio_fsk_common_types.h  lr20xx_radio_fsk_types.h  lr20xx_radio_lora.h  lr20xx_radio_lora_types.h  lr20xx_radio_lr_fhss.h  lr20xx_radio_lr_fhss_types.h  lr20xx_radio_ook.h  lr20xx_radio_ook_types.h  lr20xx_radio_oqpsk_15_4.h  lr20xx_radio_oqpsk_15_4_types.h  lr20xx_radio_wi_sun.h  lr20xx_radio_wi_sun_types.h  lr20xx_radio_wm_bus.h  lr20xx_radio_wm_bus_types.h  lr20xx_radio_z_wave.h  lr20xx_radio_z_wave_types.h  lr20xx_regmem.h  lr20xx_rttof.h  lr20xx_rttof_types.h  lr20xx_status.h  lr20xx_system.h  lr20xx_system_types.h  lr20xx_workarounds.h
lr20xx_driver/src/: CMakeLists.txt  lr20xx_driver_version.c  lr20xx_radio_bluetooth_le.c  lr20xx_radio_bpsk.c  lr20xx_radio_common.c  lr20xx_radio_fifo.c  lr20xx_radio_flrc.c  lr20xx_radio_fsk.c  lr20xx_radio_lora.c  lr20xx_radio_lr_fhss.c  lr20xx_radio_ook.c  lr20xx_radio_oqpsk_15_4.c  lr20xx_radio_wi_sun.c  lr20xx_radio_wm_bus.c  lr20xx_radio_z_wave.c  lr20xx_regmem.c  lr20xx_rttof.c  lr20xx_system.c  lr20xx_workarounds.c
lr20xx_hal/: fhss.c  fhss.h  radio.h  radio_lr20xx.c
opus_wrapper/: opus_wrapper.c  opus_wrapper.h
passthru/Inc/: main.h
passthru/Src/: audio_loopback.c  audio_rec.c  main.c
sx126x/: sx126x.c  sx126x.h
sx127x/: sx127x.c  sx127x.h
sx12xx_hal/: radio.h  radio_sx126x.c  radio_sx127x.c
vocoder_passthru/Inc/: main.h  stm32f7xx_it.h
vocoder_passthru/Src/: audio_loopback.c  audio_rec.c  main.c  stm32f7xx_it.c
